# pymatlabparser

./: README.rst  pyproject.toml
pymatlabparser/: __init__.py  matlab_lexer.py  matlab_parser.py  matlab_style_checker.py
tests/: test_matlab_style_checker.py
tests/mfiles/: mfile_no_errors.m
