[project]
name = "pymatlabparser"
version = "0.1.0"
description = "A project to create an AST for MATLAB code"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "sly"
]
[project.urls]
Homepage = "https://github.com/jol-jol/pymatlabparser"
"Bug Tracker" = "https://github.com/jol-jol/pymatlabparser/issues"

[build-system]
requires = ["setuptools>=61.0"] # Or "flit_core>=3.2", "poetry-core>=1.0.0" etc.
build-backend = "setuptools.build_meta" # Or "flit.buildapi", "poetry.core.masonry.api" etc.
